<resources>
    <string name="clerk_menu_monthly">Monthly Check</string>
    <string name="clerk_menu_retrieval">Retrieval Forms</string>
    <string name="clerk_menu_disbursement">Disbursement Forms</string>
    <string name="clerk_menu_discrepancy">File Discrepancy</string>
    <string name="logout">Logout</string>
    <string name="confirm">Confirm</string>
    <string name="next">Next</string>
    <string name="user_fullname">Name: </string>
    <string name="user_role">Role: </string>
    <string name="inventory_check_name">Item Name: </string>
    <string name="inventory_check_category">Category: </string>
    <string name="inventory_check_recorded">Recorded: </string>
    <string name="inventory_check_actual">Actual: </string>
    <string name="inventory_check_reason">Reason: </string>
    <string name="inventory_check_adjusted">Adjusted: </string>
    <string name="dept_menu_delegate">Delegate Authority</string>
    <string name="dept_menu_adjustment">View All Adjustment</string>
    <string name="customdialogtitle">Edit Retrieved Qty</string>
    <string name="no_pending_adjustments">No pending inventory adjustments found</string>

    <!--Activity Titles-->
    <string name="app_name">Logic University Stationery App</string>
    <string name="icon_name">LU Stationery</string>
    <string name="monthly_list_name">Monthly Check List</string>
    <string name="monthly_confirm_name">Monthly Check Confirmation</string>
    <string name="monthly_detail_name">Monthly Check Confirmation</string>
    <string name="logic_activity_name">Login Activity</string>
    <string name="file_discrepancy_name">File Discrepancy</string>
    <string name="dept_delegateauthority_name">Delegate Authority</string>
    <string name="view_adjustment_name">View All Pending Adjustment</string>
    <string name="view_pending_request">View All Pending Requests</string>
    <string name="view_adjustment_detail_name">Adjustment Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
