<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inventory_check_name"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:id="@+id/textView1" />

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:id="@+id/inventoryCheckRowText1" />
        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/inventory_check_category"
                android:id="@+id/textView2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/inventoryCheckRowText2" />
        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/inventory_check_recorded"
                android:id="@+id/textView2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/inventoryCheckRowText3" />
        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/inventory_check_actual"
                android:id="@+id/textView2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/inventoryCheckRowText4" />
        </TableRow>
    </TableLayout>
</RelativeLayout>