<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/fileDiscrepancyNameLabel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/inventory_check_name"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fileDiscrepancyNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/fileDiscrepancyAdjustedQty"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/inventory_check_adjusted"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fileDiscrepancyAdjustedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/fileDiscrepancyReason"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/inventory_check_reason"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/fileDiscrepancyReasonEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="text"/>
        </TableRow>
    </TableLayout>
</LinearLayout>